--- a/index.html
+++ b/index.html
@@ -29,9 +29,14 @@
       let playerWins = 0;
       let cpuChoice;
 
-      const score = document.querySelector("p");
-      let updateScore = function () {
+      const cpuScore = document.querySelectorAll[0]("h2");
+      let updateCpuScore = function () {
         score.textContent = cpuWins;
+      };
+
+      const playerScore = document.querySelectorAll[1]("h2");
+      let updatePlayerScore = function () {
+        score.textContent = playerWins;
       };
 
       function setCpuChoice() {
