change = back to == in setCpuChoice function

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 
       function setCpuChoice() {
         let cpuChoiceNum = Math.floor(Math.random() * 3);
-        if (cpuChoiceNum = 0) {
+        if (cpuChoiceNum == 0) {
           cpuChoice = "rock";
-        } else if (cpuChoiceNum = 1) {
+        } else if (cpuChoiceNum == 1) {
           cpuChoice = "paper";
         } else {
           cpuChoice = "scissors";
