add styling to scoreboards

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
       <button class="btn flex-item paper">Paper</button>
       <button class="btn flex-item scissors">Scissors</button>
     </div>
-    <div>
-      <div class="cpuScore">
+    <div id = "scoreboards">
+      <div class="Score">
         <h2>Cpu Score</h2>
         <p></p>
       </div>
-      <div class="playerScore">
+      <div class="Score">
         <h2>Player Score</h2>
         <p></p>
       </div>
